--- a/app/_styles/globals/base.scss
+++ b/app/_styles/globals/base.scss
@@ -12,8 +12,7 @@ html {
 body {
     font-family: $font-base;
     color: $base-color;
-    background-color: $white;
-    background-color: $primary-beige;
+    background-color: $secondary-beige;
     font-size: 16px;
     line-height: 1.5;
     margin: 0;
@@ -155,7 +154,7 @@ section {
   margin-bottom: 1.5rem;
   padding: 0.5rem;
   border-radius: 0.25rem;
-  background-color: $secondary-beige;
+  background-color: $warm-white;
   box-shadow: $border-shadow;
 
   @include respond(md) {
