--- a/app/_styles/blocks/headerEditor.scss
+++ b/app/_styles/blocks/headerEditor.scss
@@ -5,33 +5,40 @@
   padding: $gutter;
 
   &__preview {
-    position: relative;
     width: 100%;
-    height: 13rem;
-    margin-bottom: 1.5rem;
+    aspect-ratio: 4 / 1;
+    position: relative;
     background-size: cover;
     background-position: center 25%;
     background-repeat: no-repeat;
-    background-attachment: scroll;
-    border: 1px solid rgba(0, 0, 0, 0.1);
     overflow: hidden;
+    border: 1px solid rgba($black, 0.1);
+    margin-bottom: $gutter;
+
+    &::before {
+      content: "";
+      position: absolute;
+      inset: 0;
+      background: rgba($black, 0.45);
+      z-index: 1;
+    }
 
     &-content {
       position: relative;
       width: 100%;
       height: 100%;
+      z-index: 2;
     }
 
-    // Visa exakt hur headern är strukturerad
     .header__logo {
       position: absolute;
-      top: $gutter;
-      left: $gutter;
+      top: 0.25rem;
+      left: 0.25rem;
+      z-index: 3;
 
       img {
-        width: 80px;
+        width: 50px;
         height: auto;
-        display: block;
       }
     }
 
@@ -39,31 +46,72 @@
       position: absolute;
       bottom: 0;
       right: 0;
-      padding: $gutter;
+      max-width: 60%;
       text-align: right;
-      color: $secondary-color;
+      z-index: 3;
+      padding-bottom:0;
 
       &-title {
-        font-size: 1.25rem;
-        margin: 0;
+        font-size: 0.95rem;
         font-weight: $font-weight-title;
+        color: $white;
+        margin: 0;
+        line-height: 1.2;
       }
 
       &-subtitle {
-        font-size: 0.95rem;
-        margin-top: 0.25rem;
+        font-size: 0.75rem;
         font-weight: $font-weight-text;
+        color: $white;
+        margin-top: 0.25rem;
+        line-height: 1.2;
+      }
+    }
+
+    @include respond(md) {
+      .header__logo img {
+        width: 70px;
+      }
+
+      .header__text {
+        &-title {
+          font-size: 0.8rem;
+        }
+
+        &-subtitle {
+          font-size: 0.55rem;
+        }
+      }
+    }
+  
+    @include respond(md) {
+      aspect-ratio: 3 / 1;
+
+      .header__logo img {
+        width: 80px;
+      }
+
+      .header__text {
+        max-height: 90%;
+
+        &-title {
+          font-size: 0.8rem;
+        }
+
+        &-subtitle {
+          font-size: 0.55rem;
+        }
       }
     }
   }
 
+  // Övriga inputs och knappar nedanför previewn
   input[type="file"],
   input[type="text"] {
     width: 100%;
-    display: block;
     margin-bottom: 1rem;
     padding: 0.5rem;
-    border: 1px solid #ccc;
+    border: 1px solid $gray;
     border-radius: 0.25rem;
     font-size: 1rem;
   }
@@ -78,7 +126,7 @@
 
     &:first-of-type {
       background-color: $primary-color;
-      color: white;
+      color: $white;
     }
 
     &.nav-modal__cancel {
