--- a/app/_styles/blocks/nyheter.scss
+++ b/app/_styles/blocks/nyheter.scss
@@ -1,5 +1,7 @@
 @use "../core/variables" as *;
 @use "../core/mixins" as *;
+@use "../extends/content.scss" as *;
+
 
 .skapa-nyhet,
 .news-page {
@@ -21,20 +23,6 @@
     margin-bottom: 1rem;
   }
 
-  label {
-    font-weight: bold;
-    font-size: 1.3rem;
-    margin-bottom: 0.25rem;
-    color: $secondary-blue;
-    display: inline-block;
-  }
-
-  input {
-    padding: 0.5rem;
-    font-size: 1rem;
-    
-  }
-
   &__actions {
     display: flex;
     justify-content: space-between;
@@ -43,25 +31,37 @@
 
   &__submit {
     background-color: #012063;
-    color: white;
+    color: $white;
     padding: 0.75rem;
     border: none;
     cursor: pointer;
     border-radius: 0.25rem;
     font-weight: bold;
   }
- 
+
+  label {
+    font-weight: bold;
+    font-size: 1.3rem;
+    margin-bottom: 0.25rem;
+    color: $secondary-blue;
+    display: inline-block;
+  }
 }
 
-.news-collection {
 
+.skapa-nyhet__title-input,
+.news-page__title-input {
+  @extend .editable-heading;
+}
+
+
+.news-collection {
   &__title {
     color: $blue;
-    
+
     @include respond(md) {
       margin-left: auto;
       margin-right: auto;
-
     }
   }
 
@@ -105,7 +105,7 @@
     outline: none;
 
     &:focus {
-      outline: 3px solid $blue; 
+      outline: 3px solid $blue;
       outline-offset: 4px;
       border-radius: 0.75rem;
     }
@@ -130,8 +130,6 @@
       font-weight: $font-normal;
       color: $gray;
       margin-top: 0.2rem;
-
-      
     }
   }
 
@@ -154,7 +152,7 @@
     line-height: 1.6;
     line-clamp: 4;
     display: -webkit-box;
-    -webkit-line-clamp: 4; 
+    -webkit-line-clamp: 4;
     -webkit-box-orient: vertical;
     overflow: hidden;
   }
@@ -213,20 +211,26 @@
   }
 
   &__scroll-wrapper {
+    overflow: hidden;
     display: flex;
     align-items: center;
     gap: 1rem;
-    overflow: hidden;
+
+    @include respond(lg) {
+      margin-left: calc(-1 * (100vw - 1440px) / 2);
+      margin-right: calc(-1 * (100vw - 1440px) / 2);
+      padding-inline: 1rem;
+      width: auto;
+      max-width: none;
+    }
   }
-}
 
-
-  .latest-news--scroll {
+  &--scroll {
     @include horizontal-scroll(1.5rem);
     scroll-behavior: smooth;
     flex: 1;
 
-    scrollbar-width: none; 
+    scrollbar-width: none;
     -ms-overflow-style: none;
 
     &::-webkit-scrollbar {
@@ -234,54 +238,56 @@
     }
   }
 
-.latest-news__arrow-container {
-  flex-shrink: 0;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.latest-news__arrow {
-  background: $secondary-beige;
-  border: 1px solid $gray;
-  border-radius: 50%;
-  padding: 0.5rem;
-  cursor: pointer;
-  transition: background-color 0.3s;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-
-  svg {
-    width: 24px;
-    height: 24px;
-    color: $blue;
+  &__arrow-container {
+    flex-shrink: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
   }
 
-  &:hover {
-    background-color: $secondary-blue;
+  &__arrow {
+    background: $secondary-beige;
+    border: 1px solid $gray;
+    border-radius: 50%;
+    padding: 0.5rem;
+    cursor: pointer;
+    transition: background-color 0.3s;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 
     svg {
-      color: $white;
+      width: 24px;
+      height: 24px;
+      color: $blue;
+    }
+
+    &:hover {
+      background-color: $secondary-blue;
+
+      svg {
+        color: $white;
+      }
+    }
+  }
+
+  &--fullbleed {
+    position: relative;
+    left: 50%;
+    right: 50%;
+    width: 100vw;
+    margin-left: -50vw;
+    margin-right: -50vw;
+    background-color: $blue;
+
+    .latest-news__content {
+      @include wrap(content);
+      padding-block: 2rem;
     }
   }
 }
 
+
 .right {
   margin-left: 20px;
-}
-
-.latest-news--fullbleed {
-  position: relative;
-  left: 50%;
-  right: 50%;
-  width: 100vw;
-  margin-left: -50vw;
-  margin-right: -50vw;
-  background-color: $blue;
-
-  .latest-news__content {
-    @include wrap(content);
-    padding-block: 2rem;
-  }
 }
