--- a/app/_styles/core/variables.scss
+++ b/app/_styles/core/variables.scss
@@ -19,13 +19,14 @@ $padding-tablet: 30px;
 $padding-desktop: 90px;
 
 $white: #f5f5f9;
+$warm-white: #f3eee8;
 $black: #171717;
 $gray: #d1d1d6;
 $secondary-gray:#cfcbc6;
 $blue: #043256;
 $secondary-blue: #154264;
 $primary-beige: #f9efe0;
-$secondary-beige: #f7f1e9;
+$secondary-beige: #f5eadd;
 $soft-brown: #8c5921;
 
 $base-color: $black;
