--- a/app/_styles/main.scss
+++ b/app/_styles/main.scss
@@ -11,9 +11,9 @@
 // extends
 @use './extends/buttons';
 @use './extends/feedbackmsg.scss';
+@use './extends/content';
 
 // blocks 
-@use './blocks/content';
 @use './blocks/navbar.scss';
 @use './blocks/footer.scss';
 @use './blocks/header.scss';
