--- a/app/_styles/blocks/footer.scss
+++ b/app/_styles/blocks/footer.scss
@@ -69,6 +69,8 @@
   }
 
   &__login {
+    position: relative;
+    padding-left: 35px;
     p {
       color: $primary-beige;
       margin:0;
@@ -89,4 +91,25 @@
       text-decoration: underline;
     }
   }
+
+  &__icon {
+    padding-right: 0.5rem;
+    position: absolute;
+    left: 0;
+    top: -3px;
+    filter: invert(1);
+  }
+}
+
+.login {
+  top: 42%;
+
+  @include respond(md) {
+    top: 12%;
+  }
+ 
+  @include respond(lg) {
+    top: 23%;
+  }
+  
 }
