--- a/app/_styles/extends/breadcrumbs.scss
+++ b/app/_styles/extends/breadcrumbs.scss
@@ -5,7 +5,7 @@
   display: flex;
   flex-wrap: wrap;
   align-items: center;
-  gap: $gutter / 2;
+  gap: calc(#{$gutter} / 2);
   margin: 0;
   padding-top: $gutter;
   list-style: none;
@@ -26,7 +26,7 @@
   a {
     color: $link-color;
     text-decoration: none;
-    padding:0;
+    padding: 0;
     @include transition(color);
 
     &:hover {
@@ -42,7 +42,7 @@
 }
 
 .breadcrumbs__separator {
-  margin: 0 ($gutter / 2);
+  margin: 0 calc(#{$gutter} / 2);
   color: $gray;
   user-select: none;
 
