--- a/app/_styles/blocks/news.scss
+++ b/app/_styles/blocks/news.scss
@@ -17,7 +17,7 @@
   }
 
   &__title {
-    font-size: 2rem;
+    font-size: 3rem;
     font-weight: $font-bold;
     color: $blue;
     margin-bottom: 1rem;
@@ -65,6 +65,7 @@
 .news-collection {
   &__title {
     color: $blue;
+    font-size: 3rem;
 
     @include respond(md) {
       margin-left: auto;
@@ -246,7 +247,7 @@
   }
 
   &__arrow {
-    background: $secondary-beige;
+    background: $warm-white;
     border: 1px solid $gray;
     border-radius: 50%;
     padding: 0.5rem;
