--- a/app/_styles/blocks/news.scss
+++ b/app/_styles/blocks/news.scss
@@ -180,7 +180,7 @@
   }
 
   &__button {
-    background-color: $secondary-beige;
+    background-color: $warm-white;
     border: 1px solid $gray;
     color: $black;
     font-weight: $font-bold;
