fix: correct class name for styrelsen page and ensure proper import in main styles

--- a/app/_styles/blocks/styrelsen.scss
+++ b/app/_styles/blocks/styrelsen.scss
@@ -1,7 +1,7 @@
 @use "../core/variables" as *;
 @use "../core/mixins" as *;
 
-.stryrelsen {
+.styrelsen-page {
 
     &___title {
         font-size: 3rem;
