--- a/app/_styles/main.scss
+++ b/app/_styles/main.scss
@@ -27,3 +27,4 @@
 @use './blocks/adminPanel.scss';
 @use './blocks/cardGrid.scss';
 @use './blocks/memberCard.scss';
+@use './blocks/styrelsen.scss';
