--- a/app/_styles/blocks/header.scss
+++ b/app/_styles/blocks/header.scss
@@ -5,7 +5,7 @@
   position: relative;
   width: 100%;
   height: clamp(13rem, 25vh, 35rem);
-  background: url("#{$img-path}/kavallerigatan.jpg") center 25% / cover no-repeat;
+  background: url("#{$img-path}/kavallerigatan.jpg") center 25% / cover no-repeat !important;
   background-attachment: fixed;
   overflow: hidden;
 
