fix: correct nested selector syntax for title in styrelsen.scss

--- a/app/_styles/blocks/styrelsen.scss
+++ b/app/_styles/blocks/styrelsen.scss
@@ -3,7 +3,7 @@
 
 .styrelsen-page {
 
-    &___title {
+    &__title {
         font-size: 3rem;
         font-weight: $font-bold;
         color: $blue;
