Refactor layout and styles; update logo assets
- Removed redundant heading elements from the RootLayout component for improved accessibility.
- Added bottom margin to the .styrelsen-page class in the SCSS file for better spacing.
- Updated logo image source in HeaderEditor, Footer, and Header components to use the new SVG logo.
- Added new SVG logo file to the public/icons directory.

--- a/app/_styles/blocks/styrelsen.scss
+++ b/app/_styles/blocks/styrelsen.scss
@@ -2,7 +2,8 @@
 @use "../core/mixins" as *;
 
 .styrelsen-page {
-
+    margin-bottom: 5rem;
+    
     &__title {
         font-size: 3rem;
         font-weight: $font-bold;
