Refactor logo implementation across footer, header, and header editor components
- Updated footer and header styles to use CSS masking for logo display instead of img tags.
- Adjusted dimensions and background color for logo icons in footer and header.
- Removed img tags from HeaderEditor and Footer components, replacing them with divs for better styling control.
- Added responsive adjustments for logo sizes in header editor styles.
- Introduced new SVG logo file for consistent branding across the application.

--- a/app/_styles/blocks/footer.scss
+++ b/app/_styles/blocks/footer.scss
@@ -21,8 +21,20 @@
   }
 
   &__logo img {
-    max-height: 40px;
-    width: auto;
+    width: 100px;
+  height: 40px;
+  background-color: $blue;
+
+ 
+  mask-image: url("/icons/logo.svg");
+  mask-repeat: no-repeat;
+  mask-position: center;
+  mask-size: contain;
+
+  -webkit-mask-image: url("/icons/logo.svg");
+  -webkit-mask-repeat: no-repeat;
+  -webkit-mask-position: center;
+  -webkit-mask-size: contain;
   }
 
   &__info {
