--- a/app/_styles/blocks/headerEditor.scss
+++ b/app/_styles/blocks/headerEditor.scss
@@ -38,7 +38,7 @@
 
     }
 
-    &__logo-icon {
+    .header__logo-preview {
       width: 50px;
       height: 40px;
       background-color: $blue;
