--- a/app/_styles/blocks/navbar.scss
+++ b/app/_styles/blocks/navbar.scss
@@ -104,6 +104,11 @@
     }
   }
 
+  &__external-icon {
+    width: 0.9rem;
+    height: 0.9rem;
+  }
+
   &__item {
     padding: 0;
     border-top: 1px solid $secondary-blue;
