fix: update external icon dimensions and filter in Navbar component

--- a/app/_styles/blocks/navbar.scss
+++ b/app/_styles/blocks/navbar.scss
@@ -105,8 +105,9 @@
   }
 
   &__external-icon {
-    width: 0.9rem;
-    height: 0.9rem;
+    width: 2rem;
+    height: 1rem;
+    filter: invert(1);
   }
 
   &__item {
